libs/modkit-macros/tests/ui/fail/client_not_trait_path.rs
use modkit_macros::module;

#[module(name="x", capabilities=[stateful], client=123)]
pub struct X;

fn main() {}
