libs/modkit-macros/tests/ui/fail/client_not_trait_path.stderr
error: client must be a trait path, e.g. client = crate::api::MyClient
 --> tests/ui/fail/client_not_trait_path.rs:3:52
  |
3 | #[module(name="x", capabilities=[stateful], client=123)]
  |                                                    ^^^
